sprint 15 add some test to booking